image responsive problem solved

--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                             </div>
                         </div>                     
                     </div>
-                    <div class="col-md-7 col-sm-12">
-                        <div class="about-logo d-flex align-items-center">
+                    <div class="col-md-7 col-sm-12 m-auto">
+                        <div class="about-logo ">
                             <img src="Logo, Icon/XMLID 1.png" alt="">
                         </div>
                         
@@ -205,5 +205,6 @@
         </section>
 
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
